--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,35 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* CUSTOM VARIABLES */
+  --brand-color: rgb(229,9,20);
+  --text-color-light: rgb(255,255,255);
+
+  /* LIB RELATED VARIABLES */
+  
+  --button-brand-bg-color: var(--brand-color);
+  --button-brand-txt-color: var(--text-color-light);
+
+  --button-brand-bg-hover-color: rgb(193,17,25);
+  --button-brand-txt-hover-color: var(--text-color-light);
+
+  --button-brand-bg-active-color: rgb(153,22,29);
+  --button-brand-txt-active-color: rgba(255,255,255,0.7);
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -24,7 +43,7 @@ a:hover {
 
 body {
   margin: 0;
- 
+  background-color: black
 }
 
 h1 {
@@ -32,8 +51,16 @@ h1 {
   line-height: 1.1;
 }
 
+.absoluteContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 
-button {
+
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -50,8 +77,8 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
+} */
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -63,4 +90,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
