--- a/src/style.css
+++ b/src/style.css
@@ -1,55 +1,12 @@
-:root {
-  font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87); */
-  /* background-color: #242424; */
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  /* CUSTOM VARIABLES */
-  --brand-color: rgb(229,9,20);
-  --text-color-light: rgb(255,255,255);
-
-  /* LIB RELATED VARIABLES */
-  
-  --button-brand-bg-color: var(--brand-color);
-  --button-brand-txt-color: var(--text-color-light);
-
-  --button-brand-bg-hover-color: rgb(193,17,25);
-  --button-brand-txt-hover-color: var(--text-color-light);
-
-  --button-brand-bg-active-color: rgb(153,22,29);
-  --button-brand-txt-active-color: rgba(255,255,255,0.7);
-}
-
 * {
   box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  background-color: black
+  /* background-color: black */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 .absoluteContainer {
   position: absolute;
